--- a/interface.css
+++ b/interface.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #181818;
+  background-color: #8e8e8e;
   overflow-x: hidden;
   width: 100%;
   height:100%;
@@ -12,10 +12,15 @@ body {
 a {
   margin-left: auto;
   margin-right: auto;
+  color: #2a7ae2;
+}
+
+a:visited {
+  color: #1756a9;
 }
 
 .box {
-  background-color: #282828;
+  background-color: #b6b6b6;
   width: 46%;
   border: 1px solid #d1d5da;
   border-radius: 3px;
